# UMD-CMSC-Codes

./: FloydAlgoorithm.py  UMD-CMSC-Codes.sln  generalTests.py
CMSC423_Project/: 01背包.py  CompatiblePeptides.py  test.py
CMSC423_Project/P01/: ATGC.py  run.sh
CMSC423_Project/P02/: Index.py  MinimumSkew.py  run.sh
CMSC423_Project/P03/: KMP.py  PatternMatch.py  input  run.sh
CMSC423_Project/P04/: GreedyMotif.py  input  run.sh
CMSC423_Project/P05/: SuffixTree.py  input  output  run.sh
CMSC423_Project/P06/: ReverseBWT.py  input  run.sh
CMSC423_Project/P07/: Alignment.py  input  run.sh
CMSC423_Project/P08/: LocalAlignment.py  run.sh
CMSC423_Project/P09/: Peptide.py  output  run.sh
CMSC423_Project/P10/: KMeans.py  run.sh
CMSC423_Project/P11/: HierarchicalCluster.py  output  run.sh
CMSC425_FinalProject/: FogOfWar.unitypackage
CMSC433_Project/Class 1/: code.csproj  code.deps.json
CMSC433_Project/Class 2/: binarySearch.cs  binarySearch.deps.json  binarySearch.dfy  verifier.dfy
CMSC433_Project/Class 3/: hoareLogic.dfy
CMSC433_Project/Class 4/: Basics.hs
CMSC433_Project/Class 6/: Datatypes.hs  TreeFolds.hs  cmsc433-trees.cabal
CMSC433_Project/Class01/: code.cs  code.dfy
CMSC433_Project/Class02/: binarySearch.csproj  verifier.dfy
CMSC433_Project/Class03/: hoareLogic.dfy
CMSC433_Project/Class04/: README.md  cmsc433-basics.cabal
CMSC433_Project/Class05/: Foldr.hs  HigherOrder.hs  Sum.hs  cmsc433-higherorder.cabal
CMSC433_Project/Class06/: DList.hs  Datatypes.hs  TreeFolds.hs
CMSC433_Project/Class07/: Classes.hs  cmsc433-classes.cabal
CMSC433_Project/Class08/Classes/: Classes.hs  IOExercise.hs
CMSC433_Project/Class08/QuickCheck/: QuickCheck.hs  QuickList.hs  cmsc433-quickcheck.cabal
CMSC433_Project/Class09/: Parsers.hs  Xml.hs
CMSC433_Project/Class10/: XML.hs
CMSC433_Project/Class11/: AST.hs  ParserCombinators.hs  Parsers.hs  cmsc433-parsers.cabal
CMSC433_Project/Class12/: CHANGELOG.md  EitherMonad.hs  GenericMonads.hs  MaybePractice.hs  Monads.hs  cmsc433-monads.cabal
CMSC433_Project/ExamPrep/: Prep.hs
CMSC433_Project/Project 0/: HelloWorld.csproj  HelloWorld.deps.json  HelloWorld.dfy
CMSC433_Project/Project00/: HelloWorld.cs
CMSC433_Project/Project01_VerificationHoareLogic/: Homework.dfy
CMSC433_Project/Project02_HaskellBasics/: Main.hi  Main.hs
CMSC433_Project/Project02_HaskellBasics/.stack-work/: stack.sqlite3
CMSC433_Project/Project02_HaskellBasics/.stack-work/ghci/3a9aa4f7/: cabal_macros.h
CMSC433_Project/Project02_HaskellBasics/.stack-work/ghci/6d8025a6/: cabal_macros.h
CMSC433_Project/Project03_Parser/: miniDafny.cabal
CMSC433_Project/Project03_Parser/.stack-work/: stack.sqlite3
CMSC433_Project/Project03_Parser/.stack-work/ghci/33ba9650/: cabal_macros.h
CMSC433_Project/Project03_Parser/.stack-work/ghci/bf334d90/: cabal_macros.h
CMSC433_Project/Project03_Parser/.stack-work/install/77d2fa40/lib/x86_64-windows-ghc-9.6.5/miniDafny-1.0.0-1EMiIflhn9NFEhHVX1biC5/: Parser.hi  ParserLib.hi
CMSC433_Project/Project03_Parser/.stack-work/install/77d2fa40/pkgdb/: miniDafny-1.0.0-1EMiIflhn9NFEhHVX1biC5.conf  package.cache
CMSC433_Project/Project03_Parser/dafny/Square-Mistakes/: Square-1.dfy  Square-4.dfy  Square-6.dfy
CMSC433_Project/Project03_Parser/dafny/TwoLoops-Mistakes/: TwoLoops-3.dfy  TwoLoops-5.dfy
CMSC433_Project/Project03_Parser/more-programs/: ManyBinops.dfy  emptyMethod.dfy  ensures.dfy  findMinVal.dfy
CMSC433_Project/Project03_Parser/src/: Parser.hs  ParserLib.hs  Printer.hs
CMSC433_Project/Project04_Interpreter/.stack-work/: stack.sqlite3
CMSC433_Project/Project04_Interpreter/dafny/: Max.dfy
CMSC433_Project/Project04_Interpreter/more-programs/: BadMin.dfy  LinearSearch.dfy
CMSC433_Project/Project04_Interpreter/src/: Eval.hs
CMSC433_Project/Project05_Verification/: miniDafny.cabal
CMSC433_Project/Project05_Verification/.stack-work/ghci/9f0d793a/: cabal_macros.h
CMSC433_Project/Project05_Verification/.stack-work/install/77d2fa40/lib/x86_64-windows-ghc-9.6.5/miniDafny-1.0.0-1EMiIflhn9NFEhHVX1biC5/: Printer.hi
CMSC433_Project/Project05_Verification/.stack-work/install/77d2fa40/pkgdb/: miniDafny-1.0.0-1EMiIflhn9NFEhHVX1biC5.conf
CMSC433_Project/Project05_Verification/dafny/Square-Mistakes/: Square-3.dfy  Square-5.dfy  Square-7.dfy
CMSC433_Project/Project05_Verification/dafny/TwoLoops-Mistakes/: TwoLoops-1.dfy
CMSC433_Project/Project05_Verification/more-programs/: arrays.dfy  emptyWithArg.dfy  emptyWithReturns.dfy  requires.dfy
CMSC433_Project/Project05_Verification/src/: Main.hs  Printer.hs  Syntax.hs  VCGen.hs
CMSC433_Project/Project06_Z3/.stack-work/: stack.sqlite3
CMSC433_Project/Project06_Z3/.stack-work/install/ed5a7b66/pkgdb/: miniDafny-1.0.0-1EMiIflhn9NFEhHVX1biC5.conf  package.cache
CMSC433_Project/Project06_Z3/dafny/: Min.dfy  TwoLoops.dfy
CMSC433_Project/Project06_Z3/dafny/Square-Mistakes/: Square-2.dfy  Square-8.dfy
CMSC433_Project/Project06_Z3/dafny/TwoLoops-Mistakes/: TwoLoops-2.dfy  TwoLoops-4.dfy
CMSC433_Project/Project06_Z3/more-programs/: Abs.dfy  Square.dfy  assignment.dfy  emptyWithArgs.dfy  findMinIndex.dfy
CMSC433_Project/Project06_Z3/src/: Z3.hs
CMSC433_Project/Project1_VerificationHoareLogic/: Homework.dfy
CMSC433_Project/Test/: Test.hs  test.cs  test.csproj  test.dfy
CMSC433_Project/Test/HelloWorld/: HelloWorld.cabal
CMSC433_Project/Test/HelloWorldHaskell/app/: Main.hi  Main.hs
