cabal-version:       >=1.10
name:                cmsc433-classes
version:             0.1.0.0
synopsis:            Class materials from CMSC 433, UMD
description:         Type classes
license-file:        LICENSE
maintainer:          leonidas@umd.edu
build-type:          Simple

library
  exposed-modules:     Classes
                     , IOExercise
  -- other-modules:
  build-depends:       base >= 4.15, HUnit >= 1.6, filepath >= 1.4
  default-language:    GHC2021
  ghc-options:         -Wno-type-defaults -Wincomplete-patterns
  default-extensions:
    
