cabal-version:       >=1.10

name:                cmsc433-monads
version:             0.1.0.0
synopsis:            Maybe and List monads
license:             OtherLicense
license-file:        LICENSE
maintainer:          leonidas@umd.edu
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Monads
                     , MaybePractice
                     , GenericMonads
                     , EitherMonad
  build-depends:       base >= 4.15
                     , HUnit >= 1.6
                     , QuickCheck >= 2.14
                     , containers >= 0.6
  default-language:    GHC2021
  ghc-options:         -Wincomplete-patterns -Wno-missing-signatures -Wno-noncanonical-monad-instances
  default-extensions:
  
